--- a/ansible-ipi-install/roles/scale-worker/tasks/main.yml
+++ b/ansible-ipi-install/roles/scale-worker/tasks/main.yml
@@ -10,7 +10,7 @@
     scale_worker_index: "{{ current_worker_count | int }}"
 
 - debug:
-    msg: Scaling worker starts from - "{{ scale_worker_index }}" to "{{ scale_worker_count }}"
+    msg: Scaling worker starts from - "{{ scale_worker_index }}" to "{{ worker_count }}"
 
 - name: Copy the approve_csr script from the local machine to the remote server
   copy:
@@ -24,7 +24,7 @@
 - name: Approve CSRs
   poll: 0
   async: 20000
-  shell: "bash /home/{{ ansible_user }}/approve_csr.bash {{ scale_worker_count }}"
+  shell: "bash /home/{{ ansible_user }}/approve_csr.bash {{ worker_count }}"
   register: approve_csr_result
 
 - name: Approve CSRs Debug
