--- a/ansible-ipi-install/playbook-jetski-scaleup.yml
+++ b/ansible-ipi-install/playbook-jetski-scaleup.yml
@@ -2,27 +2,26 @@
 - name: IPI on Baremetal Installation Playbook -- Red Hat Shared Labs JetSki Edition
   hosts: orchestration
   roles:
-    - { role: bootstrap }
-
-- hosts: provisioner
-  roles:
-    - { role: prepare-kni, ssh_path: /root/.ssh}
-
-- hosts: orchestration
-  roles:
+    - { role: scale-bootstrap }
     - { role: add-provisioner }
 
 - hosts: provisioner
+  tasks:
+    - name: set facts needed for OCP deployment on the provisioning host
+      set_fact:
+        "{{ item }}": "{{ hostvars[groups['orchestration'][0]][item] }}"
+      with_items:
+        - worker_fqdns
+        - lab_ipmi_user
+        - lab_ipmi_password
+        - scale_worker_node
+        - worker_count
+        - current_worker_count
+
+- hosts: provisioner
   roles:
-    - { role: network-discovery }
-    - { role: set-deployment-facts }
-    - { role: shared-labs-prep }
-    - { role: node-prep }
-    - { role: installer }
-  environment:
-    http_proxy: "{{ http_proxy }}"
-    https_proxy: "{{ https_proxy }}"
-    no_proxy: "{{ no_proxy_list }}"
+    - { role: scale-node-prep }
+    - { role: scale-worker }
 
 - name: Finishing IPI on Baremetal Installation 
   hosts: orchestration
@@ -43,4 +42,4 @@
       file:
         dest: "{{ ocp_nondeployed_node_inv_path }}"
         state: absent
-      when: nondeploying_worker_nodes_content.nodes | length == 0 
+      when: nondeploying_worker_nodes_content.nodes | length == 0
