--- a/ansible-ipi-install/group_vars/all.yml
+++ b/ansible-ipi-install/group_vars/all.yml
@@ -30,8 +30,11 @@ foreman_url: https://foreman.example.com/
 # However you can also force a reprovsioning of the provisioner node for redeployment scenarios
 rebuild_provisioner: false
 # Number of workers desired, by default all hosts in your allocation except 1 provisioner and 3 masters are used workers
-# However that behaviour can be overrided by explicitly settign the desired number of workers here. For a masters only deploy,
+# However that behaviour can be overrided by explicitly setting the desired number of workers here. For a masters only deploy,
 # set worker_count to 0
+# Update this variable to scale up your existing cluster, provided lab allocation is sufficient to scale up to this count. 
+# If not mentioned for a scale up execution, it includes all node available in the inventory `ocpnondeployednodeinv.json`
+# If mentioned, this value should be final worker count and cannot be less than existing worker_count.
 worker_count: 0
 # set to true to deploy with jumbo frames
 jumbo_mtu: false
