Enable Supermicro deployments and heterogeneous deployments
Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/bootstrap/tasks/01_install_packages.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/01_install_packages.yml
@@ -1,5 +1,5 @@
 - name: install packages
   package:
-    name: [ python3-dns, python3-netaddr]
+    name: [ python3-dns, python3-netaddr, ipmitool]
   become: true
 
