--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -17,36 +17,39 @@
     disable_gpg_check: yes
   become: yes
 
-- name: Create temp directory for badfish
-  tempfile:
-    state: directory
-  register: badfish_tempdir
+- name: Badfish related tasks
+  block:
+    - name: Create temp directory for badfish
+      tempfile:
+        state: directory
+      register: badfish_tempdir
 
-- name: Get Badfish master branch
-  git:
-    repo: https://github.com/redhat-performance/badfish.git
-    dest: "{{ badfish_tempdir.path }}"
-    force: yes
+    - name: Get Badfish master branch
+      git:
+        repo: https://github.com/redhat-performance/badfish.git
+        dest: "{{ badfish_tempdir.path }}"
+        force: yes
 
-- name: Set badfish venv
-  set_fact:
-    badfish_venv: "{{ badfish_tempdir.path}}/.venv"
+    - name: Set badfish venv
+      set_fact:
+        badfish_venv: "{{ badfish_tempdir.path}}/.venv"
 
-- name: Create badfish venv
-  command: python3 -m venv {{ badfish_venv }} creates={{ badfish_venv }}
+    - name: Create badfish venv
+      command: python3 -m venv {{ badfish_venv }} creates={{ badfish_venv }}
 
-- name: Update pip
-  pip:
-    name: pip
-    state: latest
-    virtualenv_command: /usr/bin/python3 -m venv
-    virtualenv: "{{ badfish_venv }}"
+    - name: Update pip
+      pip:
+        name: pip
+        state: latest
+        virtualenv_command: /usr/bin/python3 -m venv
+        virtualenv: "{{ badfish_venv }}"
 
-- name: Install badfish requirements
-  pip:
-    requirements: "{{ badfish_tempdir.path}}/requirements.txt"
-    virtualenv_command: /usr/bin/python3 -m venv
-    virtualenv: "{{ badfish_venv }}"
+    - name: Install badfish requirements
+      pip:
+        requirements: "{{ badfish_tempdir.path}}/requirements.txt"
+        virtualenv_command: /usr/bin/python3 -m venv
+        virtualenv: "{{ badfish_venv }}"
+  when: dell_nodes | length > 0
 
 - name: Clean network interfaces created by lab automation
   shell: |
@@ -164,45 +167,49 @@
   tags:
     - bootorder
 
-- include_tasks: 10_redfish_queue.yml
-  with_items:
-    - "{{ master_fqdns }}"
-    - "{{ worker_fqdns }}"
-  tags:  
-    - bootorder
+- name: Dell Boot Order tasks (Dell)
+  block:
+    - include_tasks: 10_redfish_queue.yml
+      with_items:
+        - "{{ dell_nodes }}"
 
-- name: Wait for iDrac to be responsive (check via --check-boot)
-  shell:
-    chdir: "{{ badfish_tempdir.path }}"
-    cmd: |
-      source {{ badfish_venv }}/bin/activate
-      {{ badfish_cmd }}{{ item }} --check-boot
+    - name: Wait for iDrac to be responsive (check via --check-boot for Dell) 
+      shell:
+        chdir: "{{ badfish_tempdir.path }}"
+        cmd: |
+          source {{ badfish_venv }}/bin/activate
+          {{ badfish_cmd }}{{ item }} --check-boot
+      with_items:
+        - "{{ dell_nodes }}"
+      register: wait_for_idrac
+      until: wait_for_idrac is succeeded
+      retries: 20
+      delay: 30
+
+    - name: Set nodes to director boot order (Dell)
+      shell:
+        chdir: "{{ badfish_tempdir.path }}"
+        cmd: |
+          source {{ badfish_venv }}/bin/activate
+          {{ badfish_cmd }}{{ item }} -t director
+      with_items:
+        - "{{ dell_nodes }}"
+      register: boot_order
+      until: boot_order is succeeded
+      retries: 3
+      delay: 60
+  when: dell_nodes | length > 0
+  tags:
+    - bootorder
+- name: Supermicro Boot order to PXE
+  shell: ipmitool -I lanplus -H mgmt-{{ item }} -U {{ lab_ipmi_user }} -P {{ lab_ipmi_password }} chassis bootdev pxe options=persistent
   with_items:
-    - "{{ master_fqdns }}"
-    - "{{ worker_fqdns }}"
-  register: wait_for_idrac
-  until: wait_for_idrac is succeeded
-  retries: 20
-  delay: 30
+    - "{{ supermicro_nodes }}"
+  when: supermicro_nodes | length > 0
   tags:
     - bootorder
 
-- name: Set nodes to director boot order
-  shell:
-    chdir: "{{ badfish_tempdir.path }}"
-    cmd: |
-      source {{ badfish_venv }}/bin/activate
-      {{ badfish_cmd }}{{ item }} -t director
-  with_items:
-    - "{{ master_fqdns }}"
-    - "{{ worker_fqdns }}"
-  register: boot_order
-  until: boot_order is succeeded
-  retries: 3
-  delay: 60
-  tags:
-    - bootorder
-
+  
 - name: Set SELinux permissive
   selinux:
     policy: targeted
