fixing when conditions for alias lab

--- a/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
@@ -215,23 +215,33 @@
       with_items:
         - "{{ worker_types }}"
 
-    - name: Set worker node dells
+    - name: Set worker node dells (scale)
       set_fact:
         dell_workers: "{{ dell_workers | default([]) + [ item ] }}"
       with_items:
         - "{{ worker_fqdns }}"
-      when: 
-        - ( item.split('.')[0].split('-')[2] in lab_vars['machine_types']['dell'] ) or 
-          ( item.split('.')[0].split('-')[3] in lab_vars['machine_types']['dell'] )
+      when: lab_name == 'scale' and item.split('.')[0].split('-')[3] in lab_vars['machine_types']['dell']
 
-    - name: Set worker node supermicros
+    - name: Set worker node dells (alias)
+      set_fact:
+        dell_workers: "{{ dell_workers | default([]) + [ item ] }}"
+      with_items:
+        - "{{ worker_fqdns }}"
+      when: lab_name == 'alias' and item.split('.')[0].split('-')[2] in lab_vars['machine_types']['dell']
+
+    - name: Set worker node supermicros (scale)
       set_fact:
         supermicro_workers: "{{ supermicro_workers | default([]) + [ item ] }}"
       with_items:
         - "{{ worker_fqdns }}"
-      when:
-        - ( item.split('.')[0].split('-')[2] in lab_vars['machine_types']['supermicro'] ) or
-          ( item.split('.')[0].split('-')[3] in lab_vars['machine_types']['supermicro'] )
+      when: lab_name == 'scale' and item.split('.')[0].split('-')[3] in lab_vars['machine_types']['supermicro']
+
+    - name: Set worker node supermicros (alias)
+      set_fact:
+        supermicro_workers: "{{ supermicro_workers | default([]) + [ item ] }}"
+      with_items:
+        - "{{ worker_fqdns }}"
+      when: lab_name == 'alias' and item.split('.')[0].split('-')[2] in lab_vars['machine_types']['supermicro']
 
     - name: Set master node types
       set_fact:
@@ -239,23 +249,33 @@
       with_items:
         - "{{ master_fqdns }}"
 
-    - name: Set master node dells
+    - name: Set master node dells (scale)
       set_fact:
         dell_masters: "{{ dell_masters | default([]) + [ item ] }}"
       with_items:
         - "{{ master_fqdns }}"
-      when:
-        - ( item.split('.')[0].split('-')[2] in lab_vars['machine_types']['dell'] ) or
-          ( item.split('.')[0].split('-')[3] in lab_vars['machine_types']['dell'] )
+      when: lab_name == 'scale' and item.split('.')[0].split('-')[3] in lab_vars['machine_types']['dell']
 
-    - name: Set master node supermicros
+    - name: Set master node dells (alias)
+      set_fact:
+        dell_masters: "{{ dell_masters | default([]) + [ item ] }}"
+      with_items:
+        - "{{ master_fqdns }}"
+      when: lab_name == 'alias' and item.split('.')[0].split('-')[2] in lab_vars['machine_types']['dell']
+
+    - name: Set master node supermicros (scale)
       set_fact:
         supermicro_masters: "{{ supermicro_masters | default([]) + [ item ] }}"
       with_items:
         - "{{ master_fqdns }}"
-      when:
-        - ( item.split('.')[0].split('-')[2] in lab_vars['machine_types']['supermicro'] ) or
-          ( item.split('.')[0].split('-')[3] in lab_vars['machine_types']['supermicro'] )
+      when: lab_name == 'scale' and item.split('.')[0].split('-')[3] in lab_vars['machine_types']['supermicro']
+
+    - name: Set master node supermicros (alias)
+      set_fact:
+        supermicro_masters: "{{ supermicro_masters | default([]) + [ item ] }}"
+      with_items:
+        - "{{ master_fqdns }}"
+      when: lab_name == 'alias' and item.split('.')[0].split('-')[2] in lab_vars['machine_types']['supermicro']
 
     - name: Set Dell nodes
       set_fact:
