add AMD server machine types under Dell list

--- a/ansible-ipi-install/roles/bootstrap/defaults/main.yml
+++ b/ansible-ipi-install/roles/bootstrap/defaults/main.yml
@@ -4,6 +4,10 @@ alias:
     dell:
       740xd: 
         pub_nic: eno3
+      "7425":
+        pub_nic: eno3
+      "7525":
+        pub_nic: eno3
     supermicro:
       6029r:
         pub_nic: eno1
