--- a/ansible-ipi-install/roles/scale-bootstrap/tasks/main.yml
+++ b/ansible-ipi-install/roles/scale-bootstrap/tasks/main.yml
@@ -111,28 +111,28 @@
   block:
     - name: Set worker node dells (scale)
       set_fact:
-        dell_nodes: "{{ dell_workers | default([]) + [ item ] }}"
+        dell_nodes: "{{ dell_nodes + [ item ] }}"
       with_items:
         - "{{ worker_fqdns }}"
       when: lab_name == 'scale' and item.split('.')[0].split('-')[3] in lab_vars['machine_types']['dell']
 
     - name: Set worker node dells (alias)
       set_fact:
-        dell_nodes: "{{ dell_workers | default([]) + [ item ] }}"
+        dell_nodes: "{{ dell_nodes + [ item ] }}"
       with_items:
         - "{{ worker_fqdns }}"
       when: lab_name == 'alias' and item.split('.')[0].split('-')[2] in lab_vars['machine_types']['dell']
 
     - name: Set worker node supermicros (scale)
       set_fact:
-        supermicro_nodes: "{{ supermicro_workers | default([]) + [ item ] }}"
+        supermicro_nodes: "{{ supermicro_nodes + [ item ] }}"
       with_items:
         - "{{ worker_fqdns }}"
       when: lab_name == 'scale' and item.split('.')[0].split('-')[3] in lab_vars['machine_types']['supermicro']
 
     - name: Set worker node supermicros (alias)
       set_fact:
-        supermicro_nodes: "{{ supermicro_workers | default([]) + [ item ] }}"
+        supermicro_nodes: "{{ supermicro_nodes + [ item ] }}"
       with_items:
         - "{{ worker_fqdns }}"
       when: lab_name == 'alias' and item.split('.')[0].split('-')[2] in lab_vars['machine_types']['supermicro']
