fixes 4.7 network operator validation error

--- a/ansible-ipi-install/roles/shared-labs-prep/files/99_openshift-cluster-network.yaml
+++ b/ansible-ipi-install/roles/shared-labs-prep/files/99_openshift-cluster-network.yaml
@@ -15,4 +15,5 @@ spec:
   defaultNetwork:
     type: OVNKubernetes
     ovnKubernetesConfig:
-      hybridOverlayConfig: {}
+      hybridOverlayConfig: 
+        hybridClusterNetwork: []
