--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -173,18 +173,9 @@
       with_items:
         - "{{ dell_nodes }}"
 
-    - name: Wait for iDrac to be responsive (check via --check-boot for Dell) 
-      shell:
-        chdir: "{{ badfish_tempdir.path }}"
-        cmd: |
-          source {{ badfish_venv }}/bin/activate
-          {{ badfish_cmd }}{{ item }} --check-boot
+    - include_tasks: 20_redfish_check.yml
       with_items:
         - "{{ dell_nodes }}"
-      register: wait_for_idrac
-      until: wait_for_idrac is succeeded
-      retries: 20
-      delay: 30
 
     - name: Set nodes to director boot order (Dell)
       shell:
