--- a/ansible-ipi-install/roles/network-discovery/tasks/main.yml
+++ b/ansible-ipi-install/roles/network-discovery/tasks/main.yml
@@ -10,7 +10,7 @@
 
 - name: Get the bm mac address on provisioner node
   set_fact:
-    bm_mac: "{{ hostvars[groups['orchestration'][0]]['ocpinv_content']['nodes'][0].mac[2] | lower }}"
+    bm_mac: "{{ ( routable_api | bool ) | ternary (hostvars[groups['orchestration'][0]]['ocpinv_content']['nodes'][0].mac[-1] | lower, hostvars[groups['orchestration'][0]]['ocpinv_content']['nodes'][0].mac[2] | lower) }}"
 
 - name: Get the bm provisioning address on provisioner node
   set_fact:
