Exclude vlaned interface from list
The tasks for setting bm and provisioning interfaces
fail otherwise, when there isa  VLANed interface on the
provisioning node.

Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/network-discovery/tasks/main.yml
+++ b/ansible-ipi-install/roles/network-discovery/tasks/main.yml
@@ -27,6 +27,11 @@
   with_items:
     - "{{ ansible_interfaces }}"
 
+# Remove vlaned interfaces from eligible list
+- name: Removing vlaned interfaces
+  set_fact:
+    ansible_eligible_interfaces: "{{ ansible_eligible_interfaces | reject('search', '[.]') | list }}"
+
 - name: Get the bm interface
   set_fact:
     pub_nic: "{{ item }}"
