--- a/ansible-ipi-install/roles/set-deployment-facts/tasks/main.yml
+++ b/ansible-ipi-install/roles/set-deployment-facts/tasks/main.yml
@@ -7,6 +7,7 @@
     - master_fqdns
     - master_types
     - master_vendors
+    - worker_count
     - worker_fqdns
     - worker_types
     - worker_vendors
