--- a/ansible-ipi-install/roles/set-deployment-facts/tasks/main.yml
+++ b/ansible-ipi-install/roles/set-deployment-facts/tasks/main.yml
@@ -19,3 +19,7 @@
     - lab_ipmi_password
     - ocp_deploying_node_content
     - provisioner_type
+
+- name: Convert pullsecret to JSON
+  set_fact:
+    pullsecret: "{{ pullsecret | to_json }}"
