Add DNS server param for badfish
badfish invocations fail sometimes without this

Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/bootstrap/defaults/main.yml
+++ b/ansible-ipi-install/roles/bootstrap/defaults/main.yml
@@ -1,3 +1,4 @@
+dns_server: "{{ '10.11.5.19' if lab_name == 'scale' else '10.19.96.1' }}"
 alias:
   lab_url: "http://quads11.alias.bos.scalelab.redhat.com"
   machine_types:
@@ -63,3 +64,4 @@ scale:
         pub_nic: eno1
         prov_nic: ens1f1
         prov_nic_f04: ens3f1
+
