dnsmasq fix to make sure it runs after reboot

--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -258,6 +258,14 @@
     mode: 0640
   become: yes
 
+- name: Configure dnsmasq service to start after network is online
+  lineinfile:
+    regexp: "^After=network.target"
+    line: "After=network-online.target"
+    backrefs: yes
+    path: "/usr/lib/systemd/system/dnsmasq.service"
+  become: yes
+
 #FIXME
 - name: Configure firewall
   iptables:
