Dual-Stack PR after rebasing with upstream
Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/shared-labs-prep/defaults/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/defaults/main.yml
@@ -2,3 +2,5 @@
 # defaults file for shared-labs-ocp4-prep
 worker_fqdns: []
 ovn_hybird_plugin: false
+ipv4_baremetal: true
+dualstack_baremetal: false
