--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -94,7 +94,27 @@
   when: "{{ baremetal_slave_connections }}"
   become: yes
 
-- name: Create Bridge labeled baremetal
+- name: Delete baremetal bridge
+  nmcli:
+    conn_name: baremetal
+    state: absent
+  become: yes
+
+- name: Create Bridge labeled baremetal (IPv4)
+  nmcli:
+    conn_name: baremetal
+    type: bridge
+    ifname: baremetal
+    autoconnect: yes
+    stp: off
+    ip4_method: manual
+    ip4: "{{ extcidrnet | next_nth_usable(1) }}/{{ extcidrnet | ipaddr('prefix') }}"
+    ip6_method: disabled
+    state: present
+  become: yes
+  when: not ipv6_enabled|bool or ipv4_baremetal|bool
+
+- name: Create Bridge labeled baremetal (Dual-Stack)
   nmcli:
     conn_name: baremetal
     type: bridge
@@ -104,13 +124,20 @@
     ip4_method: manual
     ip4: "{{ extcidrnet | next_nth_usable(1) }}/{{ extcidrnet | ipaddr('prefix') }}"
     state: present
+    ip6: "{{ extcidrnet6 | next_nth_usable(1) }}/{{ extcidrnet6 | ipaddr('prefix') }}"
+    ip6_method: manual
   become: yes
+  when: ipv6_enabled|bool and dualstack_baremetal|bool
+
 
 #Moving the dns entry to this task because of above problem
 - name: Set Bridge DNS priority
   shell: |
     nmcli con mod baremetal ipv4.dns {{ extcidrnet | next_nth_usable(1) }} ipv4.dns-priority 10
   become: yes
+  when: (not ipv6_enabled|bool) or
+        (ipv4_baremetal|bool) or
+        (dualstack_baremetal|bool)
 
 - name: Create Bridge slave on {{ pub_nic }}
   nmcli:
